--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.17.10",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
     "node-sass": "^7.0.1",
     "sass": "^1.51.0",
